<resources>
    <string name="app_name">exposit_android_task</string>
    <string name="age">age</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="gender">gender</string>
    <string name="postId">post_</string>
    <string name="man_text">Man</string>
    <string name="age_hint">Age</string>
    <string name="separator">/</string>
    <string name="last_name">last name</string>
    <string name="lastName">lastName</string>
    <string name="email_hint">Email</string>
    <string name="login_hint">Login</string>
    <string name="woman_text">Woman</string>
    <string name="failed_hint">Failed</string>
    <string name="success_hint">Success</string>
    <string name="age_directory">Age</string>
    <string name="login_example">login</string>
    <string name="password_hint">Password</string>
    <string name="post_directory">posts</string>
    <string name="text_directory">text</string>
    <string name="date_directory">date</string>
    <string name="last_name_hint">Last name</string>
    <string name="first_name_рште">First name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_user_hint">Create</string>
    <string name="password_example">password</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="gender_directory">Gender</string>
    <string name="profile_directory">profile</string>
    <string name="first_message_text">This is your first message</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_menu">Menu</string>
    <string name="last_name_directory">lastName</string>
    <string name="read_value_exception">Failed to read value</string>
    <string name="not_number_exception">In the age field is not a number</string>
    <string name="text_login_exception">Login or password not filled</string>
    <string name="type_you_message_hint">Type you message</string>
    <string name="failed_sign_in_status">Failed</string>
    <string name="empty_field_exception">Fill in all the fields</string>
    <string name="success_sign_in_status">Success</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose_your_gender_hint">Choose your gender</string>
    <string name="text_very_big_exception">Message cannot be empty or contain more than 100 characters</string>
    <string name="this_could_be_your_photo">This could be your photo.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="create_profile_text_button">create profile</string>
    <string name="failed_registration_status">Failed registration</string>
    <string name="success_registration_status">Success registration</string>
    <string name="not_valid_data">Don\'t valid data</string>
</resources>
